# festive-pelican

./: README.md  pyproject.toml
src/festivepelican/: __init__.py  main.py
